Issue #2042501 by andrewbelcher: Sticky table headers alignment wrong

--- a/scss/shiny.scss
+++ b/scss/shiny.scss
@@ -602,6 +602,7 @@ table.sticky-header {
 
   th {
     border-bottom: 0;
+    box-sizing: initial;
   }
 }
 /* Firefox fix for Sticky Table Headers */
